Added Register Button

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -32,5 +32,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login_LogIn" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/login_Register" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
