--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -4,14 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="project.senior.hardhats.LogIn">
+    tools:context="project.senior.hardhats.LoginActivity">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="576dp"
+        android:layout_height="368dp"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/login_Username" />
 
         <EditText
             android:id="@+id/login_UserNameEditText"
@@ -19,6 +25,12 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/login_Password" />
 
         <EditText
             android:id="@+id/login_PasswordEditText"
@@ -28,13 +40,13 @@
             android:inputType="textPassword" />
 
         <Button
-            android:id="@+id/login_LogInButton"
+            android:id="@+id/login_LoginButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login_LogIn" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/login_RegisterButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login_Register" />
