--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -48,4 +48,10 @@
         android:layout_height="wrap_content"
         android:text="@string/register_register" />
 
+    <Button
+        android:id="@+id/register_CancelButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/register_cancel" />
+
 </LinearLayout>
