Added an about screen (really for ListView practice)

--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -57,5 +57,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login_Register" />
+
+        <TextView
+            android:id="@+id/login_AboutTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/login_About" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
