Layout and color changes

--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal|center"
+    android:orientation="vertical"
     tools:context="project.senior.hardhats.LoginActivity">
 
     <LinearLayout
-        android:id="@+id/login_LogoImageView"
-        android:layout_width="576dp"
-        android:layout_height="368dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/login_LogoImageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@drawable/logo" />
 
         <TextView
             android:id="@+id/textView3"
@@ -31,9 +33,9 @@
             android:id="@+id/login_UserNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLength="@integer/MAXUSERNAMELENGTH"
+            android:inputType="textPersonName"
 
-            android:inputType="textPersonName" />
+            android:maxLength="@integer/MAXUSERNAMELENGTH" />
 
         <TextView
             android:id="@+id/textView4"
@@ -45,9 +47,9 @@
             android:id="@+id/login_PasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLength="@integer/MAXPASSWORDLENGTH"
+            android:inputType="textPassword"
 
-            android:inputType="textPassword" />
+            android:maxLength="@integer/MAXPASSWORDLENGTH" />
 
         <Button
             android:id="@+id/login_LoginButton"
@@ -67,4 +69,4 @@
             android:layout_height="wrap_content"
             android:text="@string/login_About" />
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
