--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal|center"
     android:orientation="vertical"
     tools:context="project.senior.hardhats.LoginActivity">
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
@@ -18,7 +20,7 @@
             android:id="@+id/login_LogoImageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@drawable/logo" />
 
         <TextView
             android:id="@+id/textView"
@@ -30,10 +32,10 @@
             android:id="@+id/login_UserNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLength="@integer/MAXUSERNAMELENGTH"
-
             android:ems="10"
-            android:inputType="textPersonName" />
+
+            android:inputType="textPersonName"
+            android:maxLength="@integer/MAXUSERNAMELENGTH" />
 
         <TextView
             android:id="@+id/textView2"
@@ -45,10 +47,10 @@
             android:id="@+id/login_PasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLength="@integer/MAXPASSWORDLENGTH"
-
             android:ems="10"
-            android:inputType="textPassword" />
+
+            android:inputType="textPassword"
+            android:maxLength="@integer/MAXPASSWORDLENGTH" />
 
         <Button
             android:id="@+id/login_LoginButton"
@@ -62,15 +64,16 @@
             android:layout_height="wrap_content"
             android:text="@string/login_Register" />
 
+        <TextView
+            android:id="@+id/login_AboutTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/login_About"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium"
+            tools:layout_editor_absoluteX="-1dp"
+            tools:layout_editor_absoluteY="568dp" />
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/login_AboutTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login_About"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        tools:layout_editor_absoluteX="-1dp"
-        tools:layout_editor_absoluteY="568dp" />
 </LinearLayout>
 
