--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical|center_horizontal"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/registration_registration"
+        android:textAppearance="@android:style/TextAppearance.Material.Large" />
 
     <TextView
         android:id="@+id/textView5"
@@ -12,10 +21,10 @@
 
     <EditText
         android:id="@+id/register_UserNameEditText"
-        android:maxLength="@integer/MAXUSERNAMELENGTH"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:maxLength="@integer/MAXUSERNAMELENGTH" />
 
     <TextView
         android:id="@+id/textView6"
@@ -25,11 +34,11 @@
 
     <EditText
         android:id="@+id/register_PasswordEditText"
-        android:maxLength="@integer/MAXPASSWORDLENGTH"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
 
-        android:inputType="textPassword" />
+        android:maxLength="@integer/MAXPASSWORDLENGTH" />
 
     <TextView
         android:id="@+id/textView7"
