--- a/app/src/main/res/layout-land/activity_about.xml
+++ b/app/src/main/res/layout-land/activity_about.xml
@@ -16,7 +16,7 @@
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/about_about"
+            android:text="@string/about_About"
             android:textAppearance="@android:style/TextAppearance.Material.Large" />
 
         <ListView
