--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,7 @@
             android:id="@+id/login_LoginButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/login_LogIn" />
+            android:text="@string/login_Login" />
 
         <Button
             android:id="@+id/login_RegisterButton"
