--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -6,14 +6,14 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/Registration_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/registration_Registration"
         android:textAppearance="@android:style/TextAppearance.Material.Large" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/Username_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/register_Username" />
@@ -26,7 +26,7 @@
         android:maxLength="@integer/MAXUSERNAMELENGTH" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/Password_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/register_Password" />
@@ -40,7 +40,7 @@
         android:maxLength="@integer/MAXPASSWORDLENGTH" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/ConfirmPassword_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/register_ConfirmPassword" />
