--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -19,6 +22,7 @@
         android:text="@string/register_Username" />
 
     <EditText
+        android:imeOptions="flagNoExtractUi"
         android:id="@+id/register_UserNameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,6 +36,7 @@
         android:text="@string/register_Password" />
 
     <EditText
+        android:imeOptions="flagNoExtractUi"
         android:id="@+id/register_PasswordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,6 +51,7 @@
         android:text="@string/register_ConfirmPassword" />
 
     <EditText
+        android:imeOptions="flagNoExtractUi"
         android:id="@+id/register_ConfirmPasswordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -66,3 +72,4 @@
         android:text="@string/register_Cancel" />
 
 </LinearLayout>
+    </ScrollView>
