--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,6 +23,7 @@
         android:text="@string/register_Username" />
 
     <EditText
+        android:imeOptions="flagNoExtractUi"
         android:id="@+id/register_UserNameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,6 +37,7 @@
         android:text="@string/register_Password" />
 
     <EditText
+        android:imeOptions="flagNoExtractUi"
         android:id="@+id/register_PasswordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -66,3 +71,4 @@
         android:text="@string/register_Cancel" />
 
 </LinearLayout>
+    </ScrollView>
