add customer activity finished layout need to still add spinner element for state and translate the array in register activity of states into a string resource so that they can be displayed in a drop down.

--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -110,7 +110,7 @@
                 android:id="@+id/customer_zip_code_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="@string/zip_code" />
 
             <EditText
                 android:id="@+id/customer_zip_code_editText"
