--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,6 +73,12 @@
             tools:layout_editor_absoluteX="-1dp"
             tools:layout_editor_absoluteY="568dp" />
 
+        <Button
+            android:id="@+id/main_debug"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="debug" />
+
     </LinearLayout>
 
 </LinearLayout>
