--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,78 +8,58 @@
     android:orientation="vertical"
     tools:context="project.senior.hardhats.LoginActivity">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/login_LogoImageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        app:srcCompat="@drawable/logo" />
 
-        <ImageView
-            android:id="@+id/login_LogoImageView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/logo" />
+    <EditText
+        android:id="@+id/login_UserNameEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login_Username" />
+        android:hint="@string/login_Username"
+        android:inputType="textPersonName"
+        android:maxLength="@integer/MAXUSERNAMELENGTH" />
 
-        <EditText
-            android:id="@+id/login_UserNameEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
+    <EditText
+        android:id="@+id/login_PasswordEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
 
-            android:inputType="textPersonName"
-            android:maxLength="@integer/MAXUSERNAMELENGTH" />
+        android:hint="@string/login_Password"
+        android:inputType="textPassword"
+        android:maxLength="@integer/MAXPASSWORDLENGTH" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login_Password" />
+    <Button
+        android:id="@+id/login_LoginButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/login_Login" />
 
-        <EditText
-            android:id="@+id/login_PasswordEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
+    <Button
+        android:id="@+id/login_RegisterButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/login_Register" />
 
-            android:inputType="textPassword"
-            android:maxLength="@integer/MAXPASSWORDLENGTH" />
+    <TextView
+        android:id="@+id/login_AboutTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/login_About"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        tools:layout_editor_absoluteX="-1dp"
+        tools:layout_editor_absoluteY="568dp" />
 
-        <Button
-            android:id="@+id/login_LoginButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/login_Login" />
-
-        <Button
-            android:id="@+id/login_RegisterButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/login_Register" />
-
-        <TextView
-            android:id="@+id/login_AboutTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/login_About"
-            android:textAppearance="@android:style/TextAppearance.Material.Medium"
-            tools:layout_editor_absoluteX="-1dp"
-            tools:layout_editor_absoluteY="568dp" />
-
-        <Button
-            android:id="@+id/main_debug"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="debug" />
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/main_debug"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="debug" />
 
 </LinearLayout>
 
