--- a/app/src/main/res/layout/fragment_invoice.xml
+++ b/app/src/main/res/layout/fragment_invoice.xml
@@ -2,12 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="project.senior.hardhats.InvoiceFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/invoice_navigation_frag_text" />
 
+    <Button
+        android:id="@+id/fragmentOptions_GenerateInvoiceButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/fragment_generateinvoice_GenerateInvoice" />
 </LinearLayout>
