Spinner element added to add customer and code for the add customer class done. need to validate the input and add the php routine to insert a new customer into the database

--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -134,6 +134,11 @@
                 android:inputType="textPersonName"
                 android:text="" />
 
+            <Spinner
+                android:id="@+id/customer_state_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
         </LinearLayout>
 
 
