fixed zip code edit text to accept only numeric input. also added string array resource for states that allows them to be used in a spinner. See the add customer activity for reference in using a spinner view to display string array data and getting the information from the spinner on click.

--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -117,7 +117,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:text="" />
 
             <TextView
@@ -125,14 +125,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/state" />
-
-            <EditText
-                android:id="@+id/customer_state_editText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="" />
 
             <Spinner
                 android:id="@+id/customer_state_spinner"
