--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -6,8 +6,8 @@
     tools:context="project.senior.hardhats.AddCustomer">
 
     <ScrollView
-        android:layout_width="368dp"
-        android:layout_height="576dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
 
@@ -132,10 +132,6 @@
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
-
-
-
-
     </ScrollView>
 
 </LinearLayout>
