More setting up of InvoiceCreation, skipped select customer, set up more of InvoicePreviewFragment, set up switching on buttons

--- a/app/src/main/res/layout/activity_invoice_create.xml
+++ b/app/src/main/res/layout/activity_invoice_create.xml
@@ -14,8 +14,7 @@
         android:id="@+id/invoicecreate_cancelButton"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:text="@string/createinvoice_cancel" />
+        android:layout_weight="1" />
 
     <FrameLayout
         android:id="@+id/generateinvoice_FrameLayout"
