--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,73 +2,73 @@
 <ScrollView android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical|center_horizontal"
-    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/Registration_label"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/registration_Registration"
-        android:textAppearance="@android:style/TextAppearance.Material.Large" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/Username_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/register_Username" />
+        <TextView
+            android:id="@+id/Registration_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/registration_Registration"
+            android:textAppearance="@android:style/TextAppearance.Material.Large" />
 
-    <EditText
-        android:imeOptions="flagNoExtractUi"
-        android:id="@+id/register_UserNameEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:maxLength="@integer/MAXUSERNAMELENGTH" />
+        <TextView
+            android:id="@+id/Username_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/register_Username" />
 
-    <TextView
-        android:id="@+id/Password_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/register_Password" />
+        <EditText
+            android:id="@+id/register_UserNameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="flagNoExtractUi"
+            android:inputType="textPersonName"
+            android:maxLength="@integer/MAXUSERNAMELENGTH" />
 
-    <EditText
-        android:imeOptions="flagNoExtractUi"
-        android:id="@+id/register_PasswordEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
+        <TextView
+            android:id="@+id/Password_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/register_Password" />
 
-        android:maxLength="@integer/MAXPASSWORDLENGTH" />
+        <EditText
+            android:id="@+id/register_PasswordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="flagNoExtractUi"
+            android:inputType="textPassword"
 
-    <TextView
-        android:id="@+id/ConfirmPassword_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/register_ConfirmPassword" />
+            android:maxLength="@integer/MAXPASSWORDLENGTH" />
 
-    <EditText
-        android:id="@+id/register_ConfirmPasswordEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/ConfirmPassword_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/register_ConfirmPassword" />
 
-        android:inputType="textPassword" />
+        <EditText
+            android:id="@+id/register_ConfirmPasswordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-    <Button
-        android:id="@+id/register_RegisterButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/register_Register" />
+            android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/register_CancelButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/register_Cancel" />
+        <Button
+            android:id="@+id/register_RegisterButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/register_Register" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/register_CancelButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/register_Cancel" />
+
+    </LinearLayout>
     </ScrollView>
