--- a/app/src/main/res/layout/fragment_invoice_preview.xml
+++ b/app/src/main/res/layout/fragment_invoice_preview.xml
@@ -5,9 +5,11 @@
     tools:context="project.senior.hardhats.InvoicePreviewFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+
+    <ListView
+        android:id="@+id/fragmentInvoicePreview_previewListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
